feat(app): Add non blocking, handle and print are working. Begin of GUI

--- a/MyTeams/Makefile
+++ b/MyTeams/Makefile
@@ -1,16 +1,24 @@
-OBJS	= server.o
-SOURCE	= server.c
+OBJS	= server.o client.o
+SOURCE	= server.c client.c
 HEADER	= 
-OUT	= server
+OUT	= server client
 CC	 = gcc
-FLAGS	 = -g -c -Wall
-LFLAGS	 = 
+FLAGS	 = -g -c
+# -Wall: all warnings
+LFLAGS	 = -lncurses
+
+# all: $(OBJS)
+# 	$(CC) -g $(OBJS) -o $(OUT) $(LFLAGS)
 
 all: $(OBJS)
-	$(CC) -g $(OBJS) -o $(OUT) $(LFLAGS)
+	$(CC) -g server.o -o server $(LFLAGS)
+	$(CC) -g client.o -o client $(LFLAGS)
 
 server.o: server.c
 	$(CC) $(FLAGS) server.c 
+
+client.o: client.c
+	$(CC) $(FLAGS) client.c 
 
 
 clean:
