--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,13 @@ server.o
 client
 client.o
 .vscode
+
+/MyTeams/server.o
+/MyTeams/client.o
+
+/MyTeams/server
+/MyTeams/client
+
+/MyTeams/a.out
+
+/MyTeams/.vscode
