--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -13,6 +13,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Install dependencies
-        run: sudo apt-get install -y libncurses5-dev libncursesw5-dev libcurl4
+        run: sudo apt-get install -y libncurses5-dev libncursesw5-dev libcurl4-dev
       - name: make
         run: make
